@@ -1,3 +1,8 @@
+2007-02-18  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/ejabberd_s2s.erl: Confirm to RFC3920 section 10.3 (thanks to
+	Jerome Sautret)
+
 2007-02-18  Mickael Remond  <mickael.remond@process-one.net>
 
 	* src/mod_muc/mod_muc.erl: Node now try to clean its own online room
